// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Space /> margin should render child component with Margin. 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 xaqKc"
  >
    Flex Item
  </div>
</div>
`;

exports[`<Space /> padding should render child component with Padding. 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 hChggQ"
  >
    Flex Item
  </div>
</div>
`;
